Made The Site Responsive and Added Navbar

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,3 +15,11 @@
   gap: 5vh;
   width: 100vw;
 }
+
+@media (max-width: 600px) {
+  .cardsDiv {
+    width: 90vw;
+    justify-content: center;
+    /* align-items: center; */
+  }
+}
