--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10vh;
+    /* margin-top: 10vh; */
     height: 100vh;
   }
   
@@ -32,6 +32,10 @@
     border: 0;
     border-radius: 50%;
     /* padding: 5vw; */
+  }
+
+  .msgDiv {
+    display: block;
   }
   
   .msg {
