--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -4,11 +4,11 @@
     /* height: 100vh; */
     /* width: 100vw; */
     /* border: solid 1px black; */
-    background-color: #ececec;
+    background-color: #f0efef;
     border-radius: 20px;
     gap: 1vh;
     padding: 1vh;
-    box-shadow: 5px 5px 15px #00000044,inset -5px -5px 15px #ffffff84;
+    box-shadow: 5px 5px 15px #00000044,inset -5px -5px 15px #ffffff74;
 }
 
 .mainDiv {
