Modified Cards Components

--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -7,7 +7,7 @@
     background-color: #f0efef;
     border-radius: 20px;
     gap: 1vh;
-    padding: 1vh;
+    padding: 1.5vh 3vw;
     box-shadow: 5px 5px 15px #00000044,inset -5px -5px 15px #ffffff74;
 }
 
