--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,6 @@
 .main {
   /* margin-top: 5vh; */
-  margin-left: 3vw;
+  /* margin-left: 7vw; */
   overflow-x: hidden;
 }
 
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 5vh;
   width: 100vw;
   padding-top: 15vh;
