--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,7 +16,8 @@
   justify-content: center;
   gap: 5vh;
   width: 100vw;
-  padding-top: 15vh;
+  padding-top: 17vh;
+  padding-bottom: 5vh;
 }
 
 @media (max-width: 600px) {
